2004-05-28  Gareth Owen  <gowen72@yahoo.com>

	* weather.c: Free buffers on deleting weather info structure.
	Fixes bug #143316

2004-05-27  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c, weather.c: Applied patch by Gareth Owen that fixes bug
	#134018. 

	I've done two things in this patch.  Firstly, when the location is changed any
	outstanding VFS async calls are cancelled.  Secondly, instead of passing a
	pointer to the weather info structure (which is free'd when you change
	location) to the callbacks, a pointer to the GWeatherApplet structure
	is now used.  Since the applet is only free'd when the instance is removed
	from the panel, it can't get deleted before the callback is called.

2004-05-16  Kevin Vandersloot <kfv101 psu edu>

	* gweather-pref.c: Allow for translators to specify the default location. Fixes
	bug #103080. Patch from Gareth Owen

2004-05-13  Davyd Madeley <davyd@ucc.asn.au>

	* gweather-dialog.c: Added a ETCHED_IN border around the Forecast
	dialog.

2004-04-28  Kjartan Maraas  <kmaraas@gnome.org>

	* Locations: Adding cities in Great Britain. Patch from Gareth Owen
	<gowen72 at yahoo com>. Closes bug #140675.
	* Locations: Adding some portugese cities. Patch from Milton Moura
	<mgcm at acm org>. Closes bug #140648.

2004-04-28  Gareth Owen  <gowen72@yahoo.com>

	* gweather-applet.c: Fix for crash when removing second applet.  Fixes
	bug #140964.

2004-04-25  Kevin Vandersloot <kfv101 psu edu>

	* weather.c: Fix for certain invalid conditions. From bug #134452. Patch
	from Arnaud Patard .

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* docs/ja/*: Add ja docs since the original author didn't get back
	to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* docs/Makefile.am: Add l10n'd docs to the build.
	* docs/it/Makefile.am: Point to the proper omf file - I think.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*.sgml: Remove the old sgml docs that we don't need 
	anymore.
