@@ -1,3 +1,7 @@
+2004-05-28  Muktha  <muktha.narayan@wipro.com>
+
+	* gweather-applet.c: Add accessible name. Fixes bug #134935.
+
 2004-05-28  Gareth Owen  <gowen72@yahoo.com>
 
 	* weather.c: Free buffers on deleting weather info structure.
